kingsapp - forget password link fixes - menu displayer visible in login page fixed - table width fixed

--- a/css/style.css
+++ b/css/style.css
@@ -308,4 +308,16 @@
   .menu-displayer{
    display: block; 
   }
+  .table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td{
+    padding: 6px;
+  }
+  .search-wrap{
+    margin-bottom: 10px;
+  }
+}
+
+@media (min-width:320px){
+  .table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td{
+    padding: 0px;
+  }
 }
